service-mesh/apps/manifest/base/deployments/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: external-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts:
    - "*"
