service-mesh/apps/manifest/base/deployments/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:11.6
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-storage
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: istio-system
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: grafana

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: istio-system
spec:
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
